--- a/10-packages.Rmd
+++ b/10-packages.Rmd
@@ -6,7 +6,7 @@ In this chapter, we will learn about R packages. Packages are fundamental to R. 
 
 Packages are available for different [topics](https://cran.r-project.org/web/views/). You should always look for a package before writing code from scratch. In case you have written your own codes for a new analysis or topic, do share it with the R community by converting the code into a package. You can learn more about building R packages from [R Packages](https://r-pkgs.had.co.nz/), a book written by [Hadley Wickham](https://hadley.nz/).
 
-In this post, we will learn to:
+In this chapter, we will learn to:
 
 - install R packages from 
     - CRAN
