--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,7 @@
 --- 
 title: "Introduction to R"
 author: "Aravind Hebbali"
+date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 link-citations: yes
@@ -32,3 +33,4 @@ The R session information when compiling this book is shown below:
 sessionInfo()
 ```
 
+We do not add prompts (`>` and `+`) to R source code in this book, and we comment out the text output with two hashes `##` by default, as you can see from the R session information above. This is for your convenience when you want to copy and run the code (the text output will be ignored since it is commented out). Package names are in bold text (e.g., **rmarkdown**), and function names are followed by parentheses (e.g., `bookdown::render_book()`). The double-colon operator `::` means accessing an object from a package. 
